Added Azure SQL Connection

--- a/DotNetCoreSqlDb/appsettings.json
+++ b/DotNetCoreSqlDb/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyDbConnection": "Server=(localdb)\\mssqllocaldb;Database=MyDatabaseContext-ca7b86aa-ade2-4db1-a4a9-4dce925cb814;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "AZURE_SQL_CONNECTIONSTRING": "Server=botconversations-server.mysql.database.azure.com;Database=botconversations-database;Port=3306;User Id=ilpbikxkzf;Password=SEP014SL41861B1Y$;SSL Mode=Required"
   }
 }
